[package]
name = "cal-ender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
thiserror = "1.0.38"
serde = { version = "1.0.151", features = ["derive"] }
dioxus = { version = "0.2.4", features = ["web"] }
log = "0.4"
console_log = { version = "0.2", features = ["color"], optional = true }
petgraph = "0.6.2"
cfg_block = "0.1.1"

[dependencies.uuid]
version = "1.2.2"
features = ["v4", "fast-rng", "js"]
